--- a/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/2-mathematical-building-blocks/1_gears_of_neural_networks_tensor_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "1-gears-of-neural-networks--tensor-operations.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxtocVoLi6hp5EzLtfR+9f",
+      "authorship_tag": "ABX9TyMk9RttjoqqUcv16wGz9LJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
         "      x[i, j] = max(x[i, j], 0)\n",
         "  return x"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "      x[i, j] += y[i, j]\n",
         "  return x"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -172,7 +172,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -184,20 +184,59 @@
         "x = np.random.random((20, 100))\n",
         "y = np.random.random((20, 100))"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "CoOGO1GmGnpr",
-        "outputId": "2c3a386e-f4bb-4178-bfdd-2cccb07f598b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "212ffbfa-b155-4066-cb57-b04ff12aefbc"
       },
       "source": [
         "z = x + y\n",
+        "z"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.5833715 , 1.64167321, 0.47598757, ..., 0.94894288, 1.06589035,\n",
+              "        0.57077926],\n",
+              "       [0.79683924, 1.69161099, 0.78681001, ..., 1.02353888, 1.45680047,\n",
+              "        0.93536571],\n",
+              "       [1.5425921 , 1.03753149, 1.65542218, ..., 1.56734636, 0.75605085,\n",
+              "        0.39763872],\n",
+              "       ...,\n",
+              "       [0.87791879, 1.24838634, 0.94751821, ..., 0.47714805, 1.28274589,\n",
+              "        1.19634836],\n",
+              "       [1.79288733, 0.97149845, 0.96372108, ..., 1.14259272, 1.05272603,\n",
+              "        0.70999261],\n",
+              "       [0.73725283, 1.00935213, 1.97691635, ..., 1.08769461, 1.00669283,\n",
+              "        1.40341021]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vk4i44IDGsMg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64be9905-1259-484b-bf4e-f65c953fecfa"
+      },
+      "source": [
+        "z = np.maximum(z, 0)\n",
         "z"
       ],
       "execution_count": 6,
@@ -206,62 +245,23 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1.01274148, 1.61155269, 1.53795073, ..., 0.77090228, 1.54068284,\n",
-              "        1.09296087],\n",
-              "       [1.73714791, 0.40342784, 1.33469845, ..., 0.54809805, 0.34937233,\n",
-              "        1.55131   ],\n",
-              "       [0.39046875, 0.80679872, 0.99828881, ..., 1.04383479, 0.90647764,\n",
-              "        1.37171019],\n",
+              "array([[0.5833715 , 1.64167321, 0.47598757, ..., 0.94894288, 1.06589035,\n",
+              "        0.57077926],\n",
+              "       [0.79683924, 1.69161099, 0.78681001, ..., 1.02353888, 1.45680047,\n",
+              "        0.93536571],\n",
+              "       [1.5425921 , 1.03753149, 1.65542218, ..., 1.56734636, 0.75605085,\n",
+              "        0.39763872],\n",
               "       ...,\n",
-              "       [1.25587013, 1.55416512, 0.8519494 , ..., 0.59000461, 1.33213851,\n",
-              "        1.63504904],\n",
-              "       [1.41566618, 1.70147724, 1.67182684, ..., 0.27070605, 0.34975674,\n",
-              "        0.86700909],\n",
-              "       [0.60044965, 0.19018441, 1.08574581, ..., 0.43884102, 0.47323858,\n",
-              "        1.10698798]])"
+              "       [0.87791879, 1.24838634, 0.94751821, ..., 0.47714805, 1.28274589,\n",
+              "        1.19634836],\n",
+              "       [1.79288733, 0.97149845, 0.96372108, ..., 1.14259272, 1.05272603,\n",
+              "        0.70999261],\n",
+              "       [0.73725283, 1.00935213, 1.97691635, ..., 1.08769461, 1.00669283,\n",
+              "        1.40341021]])"
             ]
           },
           "metadata": {},
           "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vk4i44IDGsMg",
-        "outputId": "4854b175-efb5-40e5-c4c2-a350c756f508",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "z = np.maximum(z, 0)\n",
-        "z"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1.01274148, 1.61155269, 1.53795073, ..., 0.77090228, 1.54068284,\n",
-              "        1.09296087],\n",
-              "       [1.73714791, 0.40342784, 1.33469845, ..., 0.54809805, 0.34937233,\n",
-              "        1.55131   ],\n",
-              "       [0.39046875, 0.80679872, 0.99828881, ..., 1.04383479, 0.90647764,\n",
-              "        1.37171019],\n",
-              "       ...,\n",
-              "       [1.25587013, 1.55416512, 0.8519494 , ..., 0.59000461, 1.33213851,\n",
-              "        1.63504904],\n",
-              "       [1.41566618, 1.70147724, 1.67182684, ..., 0.27070605, 0.34975674,\n",
-              "        0.86700909],\n",
-              "       [0.60044965, 0.19018441, 1.08574581, ..., 0.43884102, 0.47323858,\n",
-              "        1.10698798]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
         }
       ]
     },
@@ -282,17 +282,17 @@
       "source": [
         "import time"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "WaXyRKlJG8tO",
-        "outputId": "4d383354-d1ce-4a3d-805b-9662a65e0c88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8ff850ee-cc28-4754-9879-c7e80b223290"
       },
       "source": [
         "t0 = time.time()\n",
@@ -302,7 +302,7 @@
         "  z = np.maximum(z, 0.0)\n",
         "print(\"Took: {0:.2f} s\".format(time.time() - t0))"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,10 +326,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Vz4eHTimHWSF",
-        "outputId": "27820724-38d6-491a-fe6e-194673184f47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "99c7c97d-8bb2-4578-c1e4-6e2b0f6e3363"
       },
       "source": [
         "t0 = time.time()\n",
@@ -339,13 +339,13 @@
         "  z = naive_relu(z)\n",
         "print(\"Took: {0:.2f} s\".format(time.time() - t0))"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Took: 2.73 s\n"
+            "Took: 2.70 s\n"
           ]
         }
       ]
@@ -374,6 +374,220 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "1Mn3DqznHum6"
+      },
+      "source": [
+        "When possible, and if there’s no ambiguity, the smaller tensor will be broadcast to match the shape of the larger tensor. \n",
+        "\n",
+        "Broadcasting consists of two steps:\n",
+        "1. Axes (called broadcast axes) are added to the smaller tensor to match the ndim of the larger tensor.\n",
+        "2. The smaller tensor is repeated alongside these new axes to match the full shape of the larger tensor.\n",
+        "\n",
+        "Let’s look at a concrete example. Consider X with shape `(32, 10)` and y with shape `(10,)`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f58IbUoqDvJ-"
+      },
+      "source": [
+        "X = np.random.random((32, 10))    # X is a random matrix with shape (32, 10).\n",
+        "y = np.random.random((10, ))      # y is a random vector with shape (10,)."
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0lNYJWUJEKbv"
+      },
+      "source": [
+        "First, we add an empty first axis to y, whose shape becomes `(1, 10)`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kdDFMjfzEGoJ",
+        "outputId": "8b333369-9cea-47af-c071-3509935606a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y = np.expand_dims(y, axis=0)    # The shape of y is now (1, 10).\n",
+        "y.shape"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O3-HwHCUEc_R"
+      },
+      "source": [
+        "Then, we repeat y 32 times alongside this new axis, so that we end up with a tensor Y with shape `(32, 10)`, where `Y[i, :] == y` for i in range`(0, 32)`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JopbQXUJEV9F",
+        "outputId": "dc040242-6c6d-4a19-f9ef-a1c7648c5cd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Repeat y 32 times along axis 0 to obtain Y, which has shape (32, 10).\n",
+        "Y = np.concatenate([y] * 32, axis=0)\n",
+        "Y.shape"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(32, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1EbVPTnNG0M3"
+      },
+      "source": [
+        "At this point, we can proceed to add X and Y, because they have the same shape.\n",
+        "\n",
+        "The repetition operation is entirely virtual: it happens at the\n",
+        "algorithmic level rather than at the memory level. But thinking of the vector being repeated 10 times alongside a new axis is a helpful mental model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6t4nYLgfHIso"
+      },
+      "source": [
+        "def naive_add_matrix_and_vector(x, y):\n",
+        "  assert len(x.shape) == 2   # x is a rank-2 NumPy tensor\n",
+        "  assert len(y.shape) == 1   # y is a NumPy vector\n",
+        "  assert len(x.shape[1]) == len(y.shape[0])\n",
+        "\n",
+        "  # Avoid overwriting the input tensor\n",
+        "  x = x.copy()\n",
+        "  for i in range(x.shape[0]):\n",
+        "    for j in range(x.shape[1]):\n",
+        "      x[i, j] += y[j]\n",
+        "  return x            "
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oF7AVcuPJjpy"
+      },
+      "source": [
+        "With broadcasting, you can generally perform element-wise operations that take two inputs tensors if one tensor has shape `(a, b, … n, n + 1, … m)` and the other has shape `(n, n + 1, … m)`. The broadcasting will then automatically happen for axes a through `n - 1`.\n",
+        "\n",
+        "The following example applies the element-wise maximum operation to two tensors\n",
+        "of different shapes via broadcasting:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jux8gzwKJwyu",
+        "outputId": "83bee2ff-4a23-45d4-a96e-3499b259bffa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
+        "y = np.random.random((32, 10))          # y is a random tensor with shape (32, 10).\n",
+        "\n",
+        "z = np.maximum(x, y)                    # The output z has shape (64, 3, 32, 10) like x\n",
+        "z.shape"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(64, 3, 32, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fveF8cJNKfeD",
+        "outputId": "3c4aebcb-dd95-42b3-f0e1-46c3d3dc11e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = np.random.random((64, 3, 32, 10))   # x is a random tensor with shape (64, 3, 32, 10).\n",
+        "y = np.random.random((3, 32, 10))       # y is a random tensor with shape (3, 32, 10).\n",
+        "\n",
+        "z = np.maximum(x, y)                    # The output z has shape (64, 3, 32, 10) like x\n",
+        "z.shape"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(64, 3, 32, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ifvnemdHKcpe"
+      },
+      "source": [
+        "##Tensor product"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jhD9CzmeKdhy"
       },
       "source": [
         ""
